--- a/Repair/Repair.csproj
+++ b/Repair/Repair.csproj
@@ -48,8 +48,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScreenProperties.cs" />
     <Compile Include="Screen\IScreen.cs" />
+    <Compile Include="Screen\MainMenuScreen.cs" />
     <Compile Include="Screen\ScreenManager.cs" />
     <Compile Include="Screen\SplashScreen.cs" />
+    <Compile Include="Transition\FadeTransition.cs" />
+    <Compile Include="Transition\ITransition.cs" />
     <Compile Include="Weather\WeatherData.cs" />
     <Compile Include="Weather\WeatherInformation.cs" />
     <Compile Include="Weather\WeatherManager.cs" />
