--- a/Repair/Repair.csproj
+++ b/Repair/Repair.csproj
@@ -46,7 +46,9 @@
     <Compile Include="External\FastNoise.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="GameProperties.cs" />
+    <Compile Include="Games\IEntity.cs" />
     <Compile Include="Games\Map.cs" />
+    <Compile Include="Games\Player.cs" />
     <Compile Include="Games\Tile.cs" />
     <Compile Include="Games\World.cs" />
     <Compile Include="Games\WorldGenerator.cs" />
