--- a/Repair/Repair.csproj
+++ b/Repair/Repair.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Games\Tile.cs" />
     <Compile Include="Games\World.cs" />
     <Compile Include="Games\WorldGenerator.cs" />
+    <Compile Include="Games\WorldObject.cs" />
     <Compile Include="Helpers\RenderHelper.cs" />
     <Compile Include="Input\GamepadInput.cs" />
     <Compile Include="Input\IInput.cs" />
