--- a/Repair/Repair.csproj
+++ b/Repair/Repair.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScreenProperties.cs" />
+    <Compile Include="Screen\FinishScreen.cs" />
     <Compile Include="Screen\GameScreen.cs" />
     <Compile Include="Screen\IScreen.cs" />
     <Compile Include="Screen\MainMenuScreen.cs" />
@@ -159,6 +160,15 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\Maps\2.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\pop.wav">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Raw\BaksoSapi.otf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Raw\Lemon Juice.otf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\Raw\prototypes.json">
